# armer

./: .gitignore  .pylintrc  API.html  CMakeLists.txt  LICENSE  README.md  README.rst  add_qcr_repos.html  armer_installation.html  create_an_RTB_model.html  creating_a_hardware_package.html  custom_robot.html  genindex.html  guarded_motion.html  index.html  modules.html  objects.inv  package.xml  requirements.txt  search.html  searchindex.js  set_cartesian_position.html  set_cartesian_velocity.html  set_joint_position.html  set_joint_velocity.html  setup.cfg  setup.py  supported_arms.html  use_named_poses.html  welcome.html
.github/workflows/: build.yml  publish.yaml  pylint.yml  unittests.yml
_sources/: API.rst.txt  armer_installation.rst.txt  create_an_RTB_model.rst.txt  creating_a_hardware_package.rst.txt  guarded_motion.rst.txt  index.rst.txt  modules.rst.txt  set_cartesian_position.rst.txt  set_cartesian_velocity.rst.txt  set_joint_position.rst.txt  set_joint_velocity.rst.txt  supported_arms.rst.txt  welcome.rst.txt
armer/: __init__.py  armer.py  entry_point.py  errors.py  ompl_planner.py  timer.py  trajectory.py  utils.py
armer/backends/: __init__.py
armer/backends/ROS/: ROS.py  __init__.py
armer/cython/: collision_handler.c  collision_handler.cpp  collision_handler.html  collision_handler.pyx
armer/models/: URDFRobot.py  __init__.py
armer/robots/: BaseRobot.py  ROS1Robot.py  ROS2Robot.py  ROSRobot.py  __init__.py
cfg/: abb_sim.yaml  armer.yaml  kinovagen3_sim.yaml  mico_sim.yaml  multirobot.yaml  panda.yaml  panda_real.yaml  panda_sim.yaml  panda_ur5_sim.yaml  ur10_sim.yaml  ur10_ur10_sim.yaml  ur3_sim.yaml  ur5.yaml  ur5_real.yaml  ur5_sim.yaml
docs/: API.rst  Makefile  README.md  add_qcr_repos.rst  armer_installation.rst  collision_handling.rst  conf.py  create_a_launch_file.rst  create_an_RTB_model.rst  creating_a_hardware_package.rst  creating_a_launch_package.rst  creating_a_launch_package_BACKUP_44723.rst  creating_a_launch_package_LOCAL_44723.rst  creating_a_launch_package_REMOTE_44723.rst  custom_robot.rst  index.rst  modules.rst  set_cartesian_position.rst  set_cartesian_velocity.rst  set_joint_position.rst  set_joint_velocity.rst  supported_arms.rst  use_named_poses.rst  welcome.rst  working_with_a_new_arm.rst
examples/: cartesian_pose_example.py  cartesian_velocity_example.py  guarded_motion_example.py  joint_pose_example.py  joint_velocity_example.py  move_pose.py  named_pose_example.py  panda_example.py  same_code_example.py  ur5_example.py  ur5check.py
launch/: armer.launch  armer.launch.py  panda.launch
manipulation_driver/: __init__.py  driver.py  utils.py
manipulation_driver/backends/: __init__.py
manipulation_driver/backends/ROS/: ROS.py  __init__.py
manipulation_driver/robots/: ROSRobot.py  __init__.py
scripts/: armer  driver  rotations
tests/: move_pose.py  test_driver.py
