<?xml version="1.0"?>
<package format="3">
  <name>armer</name>
  <version>0.2.0</version>
  <description>Armer - The Arm drivEr</description>

  <!-- Maintained by: -->
  <maintainer email="g.suddrey@qut.edu.au">Gavin Suddrey</maintainer>
  <maintainer email="dasun.gunasinghe@qut.edu.au">Dasun Gunasinghe</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- ROS version handling -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <exec_depend condition="$ROS_VERSION == 2">rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>armer_msgs</exec_depend>

  <exec_depend condition="$ROS_VERSION == 1">trac_ik</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <!--<exec_depend>roboticstoolbox-python</exec_depend> -->

  <!-- Tests -->
  <!-- <test_depend>ament_armer</test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Only needed for ROS 2 -->
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
