<?xml version="1.0"?>
<package format="3">
  <name>armer</name>
  <version>0.2.0</version>
  <description>Armer - The Arm drivEr</description>

  <!-- Maintained by: -->
  <maintainer email="g.suddrey@qut.edu.au">Gavin Suddrey</maintainer>
  <maintainer email="dasun.gunasinghe@qut.edu.au">Dasun Gunasinghe</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- ROS version handling -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>armer_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>roboticstoolbox-python</exec_depend>

  <!-- Tests -->
  <!-- <test_depend>ament_armer</test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Needed for ROS 2 -->
    <build_type>ament_python</build_type>
  </export>
</package>